--- a/minioa/src/main/minioa/lang.properties
+++ b/minioa/src/main/minioa/lang.properties
@@ -71,7 +71,7 @@ parentjob=上级岗位
 departmentmanager=部门经理
 faield=操作失败
 userloginform=员工登录
-forgotpassword=忘记了密码
+forgotpassword=忘记了密码？
 rememberme=记住我
 login=登录
 logout=注销
@@ -155,3 +155,4 @@ creator=创建者
 modifiedby=修改者
 ballotwaring=您已经抽过签或没有权限抽签
 ballotnotice=提示：当需要分组时，默认1和2是一组，3和4是一组，依次类推。
+validateCode=验证码
