--- a/minioa/src/main/minioa/zh-cn.properties
+++ b/minioa/src/main/minioa/zh-cn.properties
@@ -155,3 +155,4 @@ creator=\u521b\u5efa\u8005
 modifiedby=\u4fee\u6539\u8005
 ballotwaring=\u60a8\u5df2\u7ecf\u62bd\u8fc7\u7b7e\u6216\u6ca1\u6709\u6743\u9650\u62bd\u7b7e
 ballotnotice=\u63d0\u793a\uff1a\u5f53\u9700\u8981\u5206\u7ec4\u65f6\uff0c\u9ed8\u8ba41\u548c2\u662f\u4e00\u7ec4\uff0c3\u548c4\u662f\u4e00\u7ec4\uff0c\u4f9d\u6b21\u7c7b\u63a8\u3002
+validateCode=\u9a8c\u8bc1\u7801
